<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bosch_grayscale"
    android:paddingBottom="8dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="serif-monospace"
                android:text="ANDON SYSTEM"
                android:textColor="@color/red"
                android:textSize="36sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"/>
            <TextView
                android:id="@+id/version_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="serif-monospace"
                android:text=""
                android:textColor="@color/red"
                android:textSize="14sp"
                android:textStyle="bold"
                />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:fontFamily="serif-monospace"
                android:text="Login"
                android:textColor="@color/colorPrimary"
                android:textSize="40sp"
                android:textStyle="normal" />


            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/vE_employee_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="56dp"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/enter_nt_userid"
                    android:inputType="textPersonName"
                    android:paddingStart="26dp"
                    android:paddingEnd="0dp"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/vE_employee_id"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/edit_text_background"
                    android:ems="10"
                    android:hint="@string/enter_employee_id"
                    android:inputType="textPassword"
                    android:paddingStart="26dp"
                    android:paddingEnd="0dp"
                    android:singleLine="true" />

                <CheckBox
                    android:id="@+id/vC_show_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:buttonTint="@color/colorPrimary"
                    android:text="@string/show_password"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/vB_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/roundbutton"
                    android:fontFamily="serif-monospace"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textSize="22sp" />

                <ProgressBar
                    android:id="@+id/vP_progressbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/vL_edit_ipaddress_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="26dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="end"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/edit"
                        android:tint="@color/colorPrimary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/edit_ip_address"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/vL_password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/TextLabel"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/colorPrimary">
                        <EditText
                            android:id="@+id/vE_password"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginBottom="8dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:hint="@string/enter_password"
                            android:textSize="16sp"
                            android:inputType="textPassword"
                            android:paddingStart="16dp"
                            android:paddingEnd="0dp"
                            android:singleLine="true"
                            android:textColorHint="@color/dark_gray" />

                    </android.support.design.widget.TextInputLayout>



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="26dp"
                        android:gravity="end"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/vT_password_cancel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginEnd="26dp"
                            android:text="@string/cancel"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/vT_password_ok"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginStart="26dp"
                            android:layout_marginEnd="16dp"
                            android:text="@string/ok"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/vL_ipaddress_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <EditText
                        android:id="@+id/vE_ipaddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:hint="@string/enter_ip_address"
                        android:backgroundTint="@color/colorPrimary"
                        android:paddingStart="16dp"
                        android:paddingEnd="0dp"
                        android:singleLine="true"
                        android:textColorHint="@color/dark_gray" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="26dp"
                        android:gravity="end"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/vT_ipaddress_cancel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginEnd="26dp"
                            android:text="@string/cancel"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/vT_ipaddress_ok"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginStart="26dp"
                            android:layout_marginEnd="16dp"
                            android:text="@string/ok"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp" />

                    </LinearLayout>

                </LinearLayout>

              <!--  <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="56dp"
                    android:gravity="center_horizontal"
                    android:text="@string/_2017_powered_by_v_v_technologies"
                    android:textSize="12sp" />-->


            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>


